apps/monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf-prometheus-ui
  namespace: default
  labels:
    app: monitoring
spec:
  selector:
    app: monitoring
  ports:
    - name: prometheus
      port: 9090
      targetPort: 9090
    - name: telegraf
      port: 9273
      targetPort: 9273
  type: ClusterIP
